Dodanie list i opisu przepisów.

--- a/pages/campfirestew.html
+++ b/pages/campfirestew.html
@@ -7,5 +7,32 @@
     <body>
         <h1>Campfire stew</h1>
         <img src="../img/campfire-stew.webp" alt="campfire stew">
+        <p>Enjoy this easy stew made with gammon and plenty of veg – it’s full of goodness, delivering four of your five-a-day, and can also be cooked in a slow cooker</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>600g gammon</li>
+            <li>1 tbsp vegetable oil</li>
+            <li>2 onions, roughly chopped</li>
+            <li>2 carrots, chopped</li>
+            <li>1 celery stick, chopped</li>
+            <li>2 peppers, deseeded and chopped</li>
+            <li>3 garlic cloves, crushed</li>
+            <li>1 tbsp tomato purée</li>
+            <li>2 tsp smoked paprika</li>
+            <li>½ tsp chilli powder (optional)</li>
+            <li>2 x 400g cans chopped tomatoes</li>
+            <li>1 tbsp Worcestershire sauce</li>
+            <li>2 bay leaves</li>
+            <li>2 x 400g cans haricot beans, drained and rinsed</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li><strong>STEP 1</strong><div>
+                Remove the rind and fat from the gammon, then soak in a pan of water in the fridge overnight – this will remove some of the salt.</li>
+            <li><strong>STEP 2</strong><div>
+                Heat the oil in a large flameproof casserole or ovenproof pan over a medium-high heat and cook the onion, carrots and celery for 10 mins, stirring regularly until the veg starts to soften. Stir in the peppers, garlic, tomato purée, paprika and chilli powder. Cook for another 2 mins, then add the tomatoes and stir. Swill out the tomato cans with a little water and pour this into the casserole. Season well and stir in the Worcestershire sauce, 1 tbsp sugar and the bay leaves.</li>
+            <li><strong>STEP 3</strong><div>
+                Heat the oven to 170C/150C fan/gas 3. Put the gammon in the casserole, cover and bring to a simmer. Transfer to the oven and cook for 3 hrs until the meat is tender. Carefully lift out the casserole and return to a medium heat on the hob, then add the haricot beans. Simmer for 10 mins until the beans are heated through, then shred the ham using two forks. Serve straightaway. <em>To store, leave to cool completely and chill in an airtight container for up to three days, or freeze for up to two months. Defrost in the fridge overnight before reheating until piping hot.</em></li>
+        </ol>
     </body>
 </html>
