--- a/pages/slowcookerroastchicken.html
+++ b/pages/slowcookerroastchicken.html
@@ -7,4 +7,23 @@
     <body>
         <h1>Slow-cooker roast chicken</h1>
         <img src="../img/slow-cooker-roast-chicken.webp" alt="roast chicken">
+        <p>Cooking a chicken in a slow cooker makes it very succulent and packed full of flavour. This simple, freezable recipe is perfect for feeding a family</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 large onion, peeled and cut into thick slices</li>
+            <li>2 carrots, halved lengthways and chopped</li>
+            <li>1 small or medium chicken</li>
+            <li>2 tbsp butter, softened</li>
+            <li>1 bay leaf</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li><strong>STEP 1</strong><div>
+                Preheat the slow cooker if necessary. Put the onion and carrot in the base of the stock pot to form a protective layer to sit the chicken on, and add 100ml boiling water. Gently ease the chicken skin away from the breast. Stir some salt and pepper into the butter and push the butter under the skin. Put the bay leaf in the cavity of the chicken and sit on top of the onion and carrot.</li>
+            <li><strong>STEP 2</strong><div>
+                Cook on low for 5 hrs, then check that the chicken is cooked by wiggling the wing – it should feel very loose. Tip the chicken up so any liquid inside flows out, then cook on high for 30 mins. If the chicken isn’t cooked through after the initial time, cook for another hour, then turn the heat up. If you want the skin to be browned, grill it for a couple of minutes (make sure your slow cooker insert is flameproof if you keep it in the pot, or transfer it to a roasting tin).</li>
+            <li><strong>STEP 3</strong><div>
+                There will be some gravy in the base of the dish with the veg, tip everything through a sieve and press the veg gently to make sure you get every last drop. Serve the veg on the side, if you like.</li>
+        </ol>
+        </body>
     </body>
