--- a/pages/slowcookedbeefstew.html
+++ b/pages/slowcookedbeefstew.html
@@ -7,5 +7,31 @@
     <body>
         <h1>Slow cooked beef stew</h1>
         <img src="../img/slow-cooker-beef-stew.webp" alt="beef stew">
+        <p>Cook braising steak in the slow cooker for really tender meat. Add button mushrooms or smoked paprika for extra flavour – it will be an instant family favourite.<p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 onion, chopped</li>
+            <li>2 celery sticks, finely chopped</li>
+            <li>2 tbsp rapeseed oil</li>
+            <li>3 carrots, halved and cut into chunks</li>
+            <li>2 bay leaves</li>
+            <li>½ pack thyme</li>
+            <li>2 tbsp tomato purée</li>
+            <li>2 tbsp Worcestershire sauce</li>
+            <li>2 beef stock cubes or stock pots</li>
+            <li>900g beef for braising such as skirt, buy a whole piece and cut it yourself for bigger chunks or buy ready-diced</li>
+            <li>2 tsp cornflour (optional)</li>
+            <li>½ small bunch parsley, chopped</li>
+            <li>buttery mash, to serve (optional)</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li><strong>STEP 1</strong><div>
+                Fry the onion and celery in 1 tbsp oil over a low heat until they start to soften – about 5 mins. Add the carrots, bay and thyme, fry for 2 mins, stir in the purée and Worcestershire sauce, add 600ml boiling water, stir and tip everything into a slow cooker. Crumble over the stock cubes or add the stock pots and stir, then season with pepper (don’t add salt as the stock may be salty).</li>
+            <li><strong>STEP 2</strong><div>
+                Clean out the frying pan and fry the beef in the remaining oil in batches until it is well browned, then tip each batch into the slow cooker. Cook on low for 8-10 hrs, or on high for 4 hrs.</li>
+            <li><strong>STEP 3</strong><div>
+                If you want to thicken the gravy, mix the cornflour with a splash of cold water to make a paste, then stir in 2 tbsp of the liquid from the slow cooker. Tip back into the slow cooker, stir and cook for a further 30 mins on high. Stir in the parsley and season again to taste. Serve with mash, if you like. Leave to cool before freezing.</li>        
+        </ol>
     </body>
 </html>
