Dwa dodatkowe przepisy, i powrót na stronę główną

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
             <li><a href="./pages/slowcookedbeefstew.html" target="_blank" rel="noopener noreferrer">Slow-cooker beef stew</a></li>
             <li><a href="./pages/campfirestew.html" target="_blank" rel="noopener noreferrer">Campfire stew</a></li>
             <li><a href="./pages/slowcookerroastchicken.html" target="_blank" rel="noopener noreferrer">Slow-cooker roast chicken</a></li>
+            <li><a href="./pages/carrotandcoriandersoup.html" target="_blank" rel="noopener noreferrer">Carrot and coriander soup</a></li>
+            <li><a href="./pages/chocolatemuffins.html" target="_blank" rel="noopener noreferrer">Chocolate muffins</a></li>
         </ul>
     </body>
 </html>
