--- a/pages/campfirestew.html
+++ b/pages/campfirestew.html
@@ -34,5 +34,6 @@
             <li><strong>STEP 3</strong><div>
                 Heat the oven to 170C/150C fan/gas 3. Put the gammon in the casserole, cover and bring to a simmer. Transfer to the oven and cook for 3 hrs until the meat is tender. Carefully lift out the casserole and return to a medium heat on the hob, then add the haricot beans. Simmer for 10 mins until the beans are heated through, then shred the ham using two forks. Serve straightaway. <em>To store, leave to cool completely and chill in an airtight container for up to three days, or freeze for up to two months. Defrost in the fridge overnight before reheating until piping hot.</em></li>
         </ol>
+        <a href="../index.html" rel="noopener noreferrer">Front page</a>
     </body>
 </html>
