--- a/pages/slowcookedbeefstew.html
+++ b/pages/slowcookedbeefstew.html
@@ -33,5 +33,6 @@
             <li><strong>STEP 3</strong><div>
                 If you want to thicken the gravy, mix the cornflour with a splash of cold water to make a paste, then stir in 2 tbsp of the liquid from the slow cooker. Tip back into the slow cooker, stir and cook for a further 30 mins on high. Stir in the parsley and season again to taste. Serve with mash, if you like. Leave to cool before freezing.</li>        
         </ol>
+        <a href="../index.html" rel="noopener noreferrer">Frone page</a>
     </body>
 </html>
