--- a/pages/slowcookerroastchicken.html
+++ b/pages/slowcookerroastchicken.html
@@ -25,5 +25,6 @@
             <li><strong>STEP 3</strong><div>
                 There will be some gravy in the base of the dish with the veg, tip everything through a sieve and press the veg gently to make sure you get every last drop. Serve the veg on the side, if you like.</li>
         </ol>
+        <a href="../index.html" rel="noopener noreferrer">Front page</a>
         </body>
     </body>
