Dodanie opisu na stronie chocolate muffins

--- a/pages/chocolatemuffins.html
+++ b/pages/chocolatemuffins.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Chocolate muffins with hot chocolate custard</h1>
         <img src="../img/chocolate-muffins.webp" alt="muffins">
-        <p></p>
+        <p>These classic cocoa puddings with a hot chocolate sauce contain just 215 calories each - and there's a lemon version too</p>
         <h3>Ingredients</h3>
         <ul>
             <li>1 tbsp cocoa powder</li>
